Refatorando.