@@ -1,10 +1,25 @@
 package br.com.eterniaserver.eterniaserver;
 
-import br.com.eterniaserver.eterniaserver.generics.*;
 import br.com.eterniaserver.eterniaserver.dependencies.eternialib.Files;
 import br.com.eterniaserver.eterniaserver.dependencies.vault.VaultHook;
-
-import com.google.common.collect.ImmutableList;
+import br.com.eterniaserver.eterniaserver.generics.EventEntityDamage;
+import br.com.eterniaserver.eterniaserver.generics.EventEntityDamageByEntity;
+import br.com.eterniaserver.eterniaserver.generics.EventPlayerJump;
+import br.com.eterniaserver.eterniaserver.generics.EventEntityInventoryClick;
+import br.com.eterniaserver.eterniaserver.generics.EventPlayerBlockBreak;
+import br.com.eterniaserver.eterniaserver.generics.EventPlayerBlockPlace;
+import br.com.eterniaserver.eterniaserver.generics.EventAsyncPlayerChat;
+import br.com.eterniaserver.eterniaserver.generics.EventPlayerCommandPreProcess;
+import br.com.eterniaserver.eterniaserver.generics.EventPlayerDeath;
+import br.com.eterniaserver.eterniaserver.generics.EventPlayerInteract;
+import br.com.eterniaserver.eterniaserver.generics.EventPlayerLeave;
+import br.com.eterniaserver.eterniaserver.generics.EventPlayerJoin;
+import br.com.eterniaserver.eterniaserver.generics.EventPlayerMove;
+import br.com.eterniaserver.eterniaserver.generics.EventPlayerRespawn;
+import br.com.eterniaserver.eterniaserver.generics.EventPlayerSignChange;
+import br.com.eterniaserver.eterniaserver.generics.EventPlayerTeleport;
+import br.com.eterniaserver.eterniaserver.generics.EventPlayerToggleSneak;
+import br.com.eterniaserver.eterniaserver.generics.EventServerListPing;
 
 import org.bukkit.Bukkit;
 import org.bukkit.ChatColor;
@@ -21,11 +36,11 @@ public class EterniaServer extends JavaPlugin {
     public static final Location error = new Location(Bukkit.getWorld("world"), 666, 666, 666, 666, 666);
     public static final DecimalFormat df2 = new DecimalFormat(".##");
 
-    public static final List<String> arrData = ImmutableList.of("tblack", "tdarkblue", "tdarkgreen", "tdarkaqua", "tdarkred",
+    public static final List<String> arrData = List.of("tblack", "tdarkblue", "tdarkgreen", "tdarkaqua", "tdarkred",
             "tdarkpurple", "tgold", "tlightgray", "tdarkgray", "tblue", "tgreen", "taqua", "tred", "tpurple", "tyellow",
             "twhite");
 
-    public static final List<String> entityList = ImmutableList.of("BEE", "BLAZE", "CAT", "CAVE_SPIDER", "CHICKEN", "COD",
+    public static final List<String> entityList = List.of("BEE", "BLAZE", "CAT", "CAVE_SPIDER", "CHICKEN", "COD",
             "COW", "CREEPER", "DOLPHIN", "DONKEY", "DROWNED", "ELDER_GUARDIAN", "ENDER_DRAGON", "ENDERMAN", "ENDERMITE",
             "EVOKER", "FOX", "GHAST", "GIANT", "GUARDIAN", "HOGLIN", "HORSE", "HUSK", "ILLUSIONER", "IRON_GOLEM",
             "MAGMA_CUBE", "MULE", "PANDA", "PARROT", "PHANTOM", "PIG", "PIGLIN", "PILLAGER", "POLAR_BEAR", "PUFFERFISH",
@@ -33,7 +48,7 @@ public class EterniaServer extends JavaPlugin {
             "SPIDER", "SQUID", "STRAY", "STRIDER", "TURTLE", "VEX", "VILLAGER", "VINDICATOR", "WITCH", "WITHER",
             "WITHER_SKELETON", "WOLF", "ZOGLIN", "ZOMBIE", "ZOMBIE_HORSE", "ZOMBIFIED_PIGLIN", "ZOMBIE_VILLAGER");
 
-    public static final List<ChatColor> colors = ImmutableList.of(ChatColor.BLACK, ChatColor.DARK_BLUE, ChatColor.DARK_GREEN,
+    public static final List<ChatColor> colors = List.of(ChatColor.BLACK, ChatColor.DARK_BLUE, ChatColor.DARK_GREEN,
             ChatColor.DARK_AQUA, ChatColor.DARK_RED, ChatColor.DARK_PURPLE, ChatColor.GOLD, ChatColor.GRAY,
             ChatColor.DARK_GRAY, ChatColor.BLUE, ChatColor.GREEN, ChatColor.AQUA, ChatColor.RED, ChatColor.LIGHT_PURPLE,
             ChatColor.YELLOW, ChatColor.WHITE);
@@ -49,7 +64,7 @@ public class EterniaServer extends JavaPlugin {
     public static final FileConfiguration groupConfig = new YamlConfiguration();
     public static final FileConfiguration cashConfig = new YamlConfiguration();
 
-    public final Files files = new Files(this);
+    private final Files files = new Files(this);
 
     @Override
     public void onEnable() {
@@ -57,39 +72,30 @@ public class EterniaServer extends JavaPlugin {
         files.loadConfigs();
         files.loadMessages();
         files.loadDatabase();
-        
-        loadManagers();
-        vaultHook();
+        files.loadPlaceHolders();
 
-        new PlaceHolders().register();
-
-        this.getServer().getPluginManager().registerEvents(new OnPlayerJump(), this);
-        this.getServer().getPluginManager().registerEvents(new OnEntityDamage(), this);
-        this.getServer().getPluginManager().registerEvents(new OnEntityDamageByEntity(), this);
-        this.getServer().getPluginManager().registerEvents(new OnEntityInventoryClick(), this);
-        this.getServer().getPluginManager().registerEvents(new OnPlayerBlockBreak(), this);
-        this.getServer().getPluginManager().registerEvents(new OnPlayerBlockPlace(), this);
-        this.getServer().getPluginManager().registerEvents(new OnAsyncPlayerChat(), this);
-        this.getServer().getPluginManager().registerEvents(new OnPlayerCommandPreProcess(), this);
-        this.getServer().getPluginManager().registerEvents(new OnPlayerDeath(), this);
-        this.getServer().getPluginManager().registerEvents(new OnPlayerInteract(), this);
-        this.getServer().getPluginManager().registerEvents(new OnPlayerLeave(), this);
-        this.getServer().getPluginManager().registerEvents(new OnPlayerJoin(), this);
-        this.getServer().getPluginManager().registerEvents(new OnPlayerMove(), this);
-        this.getServer().getPluginManager().registerEvents(new OnPlayerRespawn(), this);
-        this.getServer().getPluginManager().registerEvents(new OnPlayerSignChange(), this);
-        this.getServer().getPluginManager().registerEvents(new OnPlayerTeleport(), this);
-        this.getServer().getPluginManager().registerEvents(new OnPlayerToggleSneak(), this);
-        this.getServer().getPluginManager().registerEvents(new OnServerListPing(), this);
-
-    }
-
-    private void vaultHook() {
-        new VaultHook(this);
-    }
-
-    private void loadManagers() {
         new Managers(this);
+        new VaultHook(this);
+
+        this.getServer().getPluginManager().registerEvents(new EventPlayerJump(), this);
+        this.getServer().getPluginManager().registerEvents(new EventEntityDamage(), this);
+        this.getServer().getPluginManager().registerEvents(new EventEntityDamageByEntity(), this);
+        this.getServer().getPluginManager().registerEvents(new EventEntityInventoryClick(), this);
+        this.getServer().getPluginManager().registerEvents(new EventPlayerBlockBreak(), this);
+        this.getServer().getPluginManager().registerEvents(new EventPlayerBlockPlace(), this);
+        this.getServer().getPluginManager().registerEvents(new EventAsyncPlayerChat(), this);
+        this.getServer().getPluginManager().registerEvents(new EventPlayerCommandPreProcess(), this);
+        this.getServer().getPluginManager().registerEvents(new EventPlayerDeath(), this);
+        this.getServer().getPluginManager().registerEvents(new EventPlayerInteract(), this);
+        this.getServer().getPluginManager().registerEvents(new EventPlayerLeave(), this);
+        this.getServer().getPluginManager().registerEvents(new EventPlayerJoin(), this);
+        this.getServer().getPluginManager().registerEvents(new EventPlayerMove(), this);
+        this.getServer().getPluginManager().registerEvents(new EventPlayerRespawn(), this);
+        this.getServer().getPluginManager().registerEvents(new EventPlayerSignChange(), this);
+        this.getServer().getPluginManager().registerEvents(new EventPlayerTeleport(), this);
+        this.getServer().getPluginManager().registerEvents(new EventPlayerToggleSneak(), this);
+        this.getServer().getPluginManager().registerEvents(new EventServerListPing(), this);
+
     }
 
     public Files getFiles() {
